2011-01-14  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.
        
        Try to fix the GTK bot.

        * runtime/Heap.cpp:
        (JSC::Heap::Heap):
        (JSC::Heap::markRoots): Kids, remember to initialize your data members.
        Knowing is half the battle.

2011-01-14  Oliver Hunt  <oliver@apple.com>

        Reviewed by Stephanie Lewis.

        [jsfunfuzz] We should be clearing the lexers temporary character buffers when switching to strict mode
        https://bugs.webkit.org/show_bug.cgi?id=52501

        Clear the temporary character buffers used for reading escaped characters and
        numbers.

        * parser/Lexer.h:
        (JSC::Lexer::setOffset):

2011-01-14  Geoffrey Garen  <ggaren@apple.com>

        Try to fix non-Dtrace builds: #include Tracing.h instead of TracingDtrace.h.

        * runtime/Heap.cpp:

2011-01-13  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.

        Split out a MarkedSpace strategy object from Heap.
        https://bugs.webkit.org/show_bug.cgi?id=52421
        
        SunSpider reports no change.

        * Android.mk:
        * CMakeLists.txt:
        * GNUmakefile.am:
        * JavaScriptCore.gypi:
        * JavaScriptCore.pro:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:
        * JavaScriptCore.xcodeproj/project.pbxproj: Updated our 7 build systems. Which is cool.

        * runtime/Heap.cpp:
        (JSC::Heap::Heap):
        (JSC::Heap::destroy):
        (JSC::Heap::recordExtraCost):
        (JSC::Heap::allocate):
        (JSC::Heap::markConservatively):
        (JSC::Heap::markRoots):
        (JSC::Heap::objectCount):
        (JSC::Heap::statistics):
        (JSC::Heap::size):
        (JSC::Heap::isBusy):
        (JSC::Heap::collectAllGarbage):
        (JSC::Heap::primaryHeapBegin):
        (JSC::Heap::primaryHeapEnd):
        * runtime/Heap.h:
        (JSC::Heap::globalData):
        (JSC::Heap::markedSpace):